--- a/views/forms/run/mpov.ejs
+++ b/views/forms/run/mpov.ejs
@@ -166,7 +166,7 @@
                             <div class="text-muted">
                                 Vous devez être membre du serveur Discord BSFR afin de pouvoir nous soumettre une run Multi POV.<br>
                                 Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
-                                <i>Actualisez la page après avoir rejoint le serveur Discord pour voir le formulaire.</i>
+                                <i>Déconnectez-vous puis reconnectez-vous au site après avoir rejoint le serveur Discord pour voir le formulaire.</i>
                             </div>
                         </div>
                     <% } %>
