--- a/views/map.ejs
+++ b/views/map.ejs
@@ -45,6 +45,7 @@
                 </div>
             </div>
         </header>
+        <%- include('./includes/navbar.ejs') %>
         
         <div class="page-wrapper">
             <div class="container-xl">
