--- a/views/forms/run/mpov.ejs
+++ b/views/forms/run/mpov.ejs
@@ -42,6 +42,7 @@
                 </div>
             </div>
         </header>
+        <%- include('../../includes/navbar.ejs') %>
         
         <div class="page-wrapper">
             <div class="container-xl">
