--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -43,6 +43,7 @@
                 </div>
             </div>
         </header>
+        <%- include('../../includes/navbar.ejs') %>
         
         <div class="page-wrapper">
             <div class="container-xl">
@@ -368,13 +369,13 @@
                     <h4>Prérequis :</h4>
                     <ul>
                         <li>Meta Quest 1 ou 2 avec mode développeur activé (<a href="https://gamergen.com/actualites/oculus-quest-1-2-retrouver-mode-developpeur-et-sources-inconnues-324358-1" target="_blank">tutoriel</a>)</li>
-                        <li>Sidequest</li>
+                        <li><a href="https://sidequestvr.com/setup-howto" target="_blank">Sidequest</a></li>
                         <li>Beat Saber 1.25.1</li>
                         <li>
-                            <h4>Mods :</h4>
+                            Mods :
                             <ul>
-                                <li>BeatLeader</li>
-                                <li>Replay</li>
+                                <li><a href="https://github.com/BeatLeader/beatleader-qmod/releases" target="_blank">BeatLeader</a></li>
+                                <li><a href="https://github.com/Metalit/Replay/releases" target="_blank">Replay</a></li>
                             </ul>
                         </li>
                     </ul>
