Mise à jour de la librairie file-upload

--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -243,11 +243,11 @@
                                     <div class="row mb-3">
                                         <div class="col-6">
                                             <label class="form-label required">Fichier vidéo</label>
-                                            <file-upload id="video-file" file-types="video/h264" max-size="3221225472">Déposez votre fichier .h264 ici</file-upload>
+                                            <file-upload id="video-file" file-types="video/h264" accept=".h264" max-size="3221225472">Déposez votre fichier .h264 ici</file-upload>
                                         </div>
                                         <div class="col-6">
                                             <label class="form-label required">Fichier audio</label>
-                                            <file-upload id="audio-file" file-types="audio/wav" max-size="3221225472">Déposez votre fichier .wav ici</file-upload>
+                                            <file-upload id="audio-file" file-types="audio/wav" accept=".wav" max-size="3221225472">Déposez votre fichier .wav ici</file-upload>
                                         </div>
                                     </div>
                                     <div class="mb-3">
