--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -370,7 +370,7 @@
                     <ul>
                         <li>Meta Quest 1 ou 2 avec mode développeur activé (<a href="https://gamergen.com/actualites/oculus-quest-1-2-retrouver-mode-developpeur-et-sources-inconnues-324358-1" target="_blank">tutoriel</a>)</li>
                         <li><a href="https://sidequestvr.com/setup-howto" target="_blank">Sidequest</a></li>
-                        <li>Beat Saber 1.25.1</li>
+                        <li><a href="https://www.questmodding.com/" target="_blank">Beat Saber 1.25.1</a> (onglet « How To Downgrade »)</li>
                         <li>
                             Mods :
                             <ul>
