Mise en place du feurboard

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -35,6 +35,14 @@
                             <span class="nav-link-title">Carte interactive</span>
                         </a>
                     </li>
+                    <li class="nav-item<%= page === 'feurboard' ? ' active' : '' %>">
+                        <a class="nav-link" href="/feurboard">
+                            <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><circle cx="6" cy="7" r="3" /><circle cx="6" cy="17" r="3" /><line x1="8.6" y1="8.6" x2="19" y2="19" /><line x1="8.6" y1="15.4" x2="19" y2="5" /></svg>
+                            </span>
+                            <span class="nav-link-title">Feurboard</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
