--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -27,7 +27,7 @@
                 <div class="navbar-nav flex-row order-md-last">
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu" aria-expanded="false">
-                            <span class="avatar avatar-sm" style="background-image: url(https://cdn.discordapp.com/avatars/<%= user.id %>/<%= user.avatar %>.webp?size=80)"></span>
+                            <span class="avatar avatar-sm" style="background-image: url(<%= user.avatarURL %>?size=80)"></span>
                             <div class="d-none d-xl-block ps-2">
                                 <div><%= user.username %></div>
                             </div>
