--- a/views/admin/includes/header.ejs
+++ b/views/admin/includes/header.ejs
@@ -18,6 +18,7 @@
                     </div>
                 </a>
                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                    <a href="/agent/" class="dropdown-item">Agent</a>
                     <a href="/admin/" class="dropdown-item">Administration</a>
                     <div class="dropdown-divider"></div>
                     <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
