--- a/views/admin/bans.ejs
+++ b/views/admin/bans.ejs
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="/static/assets/css/alert.css">
     <link rel="stylesheet" href="/static/assets/css/background.css">
     <link rel="stylesheet" href="/static/assets/libs/animate/animate.min.css">
-    <title>Beat Saber FR - Bans</title>
+    <title>Beat Saber FR - Admin - Bans</title>
 </head>
 <body class="">
     <div class="background"><div class="blur"></div></div>
 
     <div class="page">
-        <%- include('header') %>
+        <%- include('./includes/header.ejs') %>
         
         <div class="page-wrapper">
             <div class="container-xl">
