--- a/views/forms/run/mpov.ejs
+++ b/views/forms/run/mpov.ejs
@@ -15,34 +15,7 @@
     <div class="background"><div class="blur"></div></div>
 
     <div class="page">
-        <header class="navbar navbar-expand-md navbar-dark sticky-top d-print-none">
-            <div class="container-xl">
-                <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
-                    <a href="/">
-                        <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
-                        Beat Saber FR
-                    </a>
-                </h1>
-                <div class="navbar-nav flex-row order-md-last">
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu" aria-expanded="false">
-                            <span class="avatar avatar-sm" style="background-image: url(<%= user.avatarURL %>?size=80)"></span>
-                            <div class="d-none d-xl-block ps-2">
-                                <div><%= user.username %></div>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                            <% if(user.isAdmin) { %>
-                            <a href="/admin/" class="dropdown-item">Administration</a>
-                            <div class="dropdown-divider"></div>
-                            <% } %>
-                            <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
-                        </div>
-                      </div>
-                </div>
-            </div>
-        </header>
-        <%- include('../../includes/navbar.ejs') %>
+        <%- include('../../includes/header.ejs') %>
         
         <div class="page-wrapper">
             <div class="container-xl">
