--- a/views/feurboard.ejs
+++ b/views/feurboard.ejs
@@ -61,59 +61,75 @@
                                 <% } %>
 
                                 <% if(user.isBSFR) { %>
-                                <div class="row">
-                                    <div class="col-12 col-lg-6 mb-3">
-                                        <div class="card">
-                                            <div class="card-header">
-                                                <div class="card-title">🔫 Attaquants</div>
-                                            </div>
-                                            <div class="list-group list-group-flush list-group-hoverable">
-                                                <% for(const attacker of attackers) { %>
-                                                <div class="list-group-item">
-                                                    <div class="row align-items-center">
-                                                        <div class="col-auto rank">
-                                                            <span class="avatar"><%= attacker.rank %></span>
-                                                        </div>
-                                                        <div class="col-auto">
-                                                            <span class="avatar" style="background-image: url(<%= attacker.avatar %>)"></span>
-                                                        </div>
-                                                        <div class="col text-truncate">
-                                                            <a href="#" class="text-reset d-block attacker-messages" data-member-id="<%= attacker.attackerId %>"><%= attacker.name %></a>
-                                                        </div>
-                                                        <div class="col-auto">
-                                                            <%= attacker.count %>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <% } %>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="card">
+                                    <div class="card-body">
+                                        <ul class="nav bg-white nav-bordered mb-4">
+                                            <li class="nav-item">
+                                                <a class="nav-link<%= ranking === 'week' ? ' active' : '' %>" href="/feurboard?ranking=week">Classement de la semaine</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link<%= ranking === 'month' ? ' active' : '' %>" href="/feurboard?ranking=month">Classement du mois</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link<%= ranking === 'global' ? ' active' : '' %>" href="/feurboard?ranking=global">Classement global</a>
+                                            </li>
+                                        </ul>
 
-                                    <div class="col-12 col-lg-6">
-                                        <div class="card">
-                                            <div class="card-header">
-                                                <div class="card-title">😫 Victimes</div>
-                                            </div>
-                                            <div class="list-group list-group-flush list-group-hoverable">
-                                                <% for(const victim of victims) { %>
-                                                <div class="list-group-item">
-                                                    <div class="row align-items-center">
-                                                        <div class="col-auto rank">
-                                                            <span class="avatar"><%= victim.rank %></span>
-                                                        </div>
-                                                        <div class="col-auto">
-                                                            <span class="avatar" style="background-image: url(<%= victim.avatar %>)"></span>
-                                                        </div>
-                                                        <div class="col text-truncate">
-                                                            <a href="#" class="text-reset d-block victim-messages" data-member-id="<%= victim.victimId %>"><%= victim.name %></a>
-                                                        </div>
-                                                        <div class="col-auto">
-                                                            <%= victim.count %>
+                                        <div class="row row-sm row-cards">
+                                            <div class="col-12 col-lg-6">
+                                                <div class="card m-0 border-0">
+                                                    <div class="card-body p-0">
+                                                        <h3 class="card-title">🔫 Attaquants</h3>
+                                                        <div class="list-group list-group-flush list-group-hoverable">
+                                                            <% for(const attacker of attackers) { %>
+                                                            <div class="list-group-item">
+                                                                <div class="row align-items-center">
+                                                                    <div class="col-auto rank">
+                                                                        <span class="avatar"><%= attacker.rank %></span>
+                                                                    </div>
+                                                                    <div class="col-auto">
+                                                                        <span class="avatar" style="background-image: url(<%= attacker.avatar %>)"></span>
+                                                                    </div>
+                                                                    <div class="col text-truncate">
+                                                                        <a href="#" class="text-reset d-block attacker-messages" data-member-id="<%= attacker.attackerId %>"><%= attacker.name %></a>
+                                                                    </div>
+                                                                    <div class="col-auto">
+                                                                        <%= attacker.count %>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <% } %>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <% } %>
+                                            </div>
+        
+                                            <div class="col-12 col-lg-6">
+                                                <div class="card m-0 border-0">
+                                                    <div class="card-body p-0">
+                                                        <h3 class="card-title">😫 Victimes</h3>
+                                                        <div class="list-group list-group-flush list-group-hoverable">
+                                                            <% for(const victim of victims) { %>
+                                                            <div class="list-group-item">
+                                                                <div class="row align-items-center">
+                                                                    <div class="col-auto rank">
+                                                                        <span class="avatar"><%= victim.rank %></span>
+                                                                    </div>
+                                                                    <div class="col-auto">
+                                                                        <span class="avatar" style="background-image: url(<%= victim.avatar %>)"></span>
+                                                                    </div>
+                                                                    <div class="col text-truncate">
+                                                                        <a href="#" class="text-reset d-block victim-messages" data-member-id="<%= victim.victimId %>"><%= victim.name %></a>
+                                                                    </div>
+                                                                    <div class="col-auto">
+                                                                        <%= victim.count %>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <% } %>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
