Ajout d'une actualité pour le mois des fiertés avec les sabres BSFR créés pour l'occasion

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,26 @@
                             
                             <p>
                                 <div class="text-muted">
+                                    jeudi 01 juin 2023
+                                </div>
+
+                                <h2>Joyeux mois des fiertés tout le monde ! 🏳️‍🌈</h2>
+
+                                <p>
+                                    Beat Saber FR s'habille également des couleurs RGB car on est des GAYmers avant tout 😎
+                                </p>
+                                <p>
+                                    <strong>@Ralex</strong> a mis à jour les sabres BSFR pour l'occasion !
+                                </p>
+
+                                <a class="btn" href="/static/sabers/BSFR_Saber_v1.4_Rainbow.saber">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /><line x1="12" y1="11" x2="12" y2="17" /><polyline points="9 14 12 17 15 14" /></svg>
+                                    BSFR_Saber_v1.4_Rainbow.saber
+                                </a>
+                            </p>
+                            <hr>
+                            <p>
+                                <div class="text-muted">
                                     samedi 22 avril 2023
                                 </div>
 
@@ -98,7 +118,7 @@
                                 Heyow tout le monde !<br>
                                 <br>
                                 Après quelque temps passé à élaborer les sabres, nous avons le plaisir de vous présenter les sabres BSFR !<br>
-                                Ils ont été créés par notre cher @Ralex ! Merci encore à toi <3<br>
+                                Ils ont été créés par notre cher <strong>@Ralex</strong> ! Merci encore à toi &lt;3<br>
                                 <a class="btn" href="/static/sabers/BSFR_Saber_v1.1.saber">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /><line x1="12" y1="11" x2="12" y2="17" /><polyline points="9 14 12 17 15 14" /></svg>
                                     BSFR_Saber_v1.1.saber
