--- a/views/map.ejs
+++ b/views/map.ejs
@@ -47,6 +47,9 @@
                                 <% } %>
 
                                 <% if(user.isBSFR) { %>
+                                <div class="alert alert-info" role="alert">
+                                    <div class="text-muted">Utilisez la commande <code>/ville</code> dans le salon <strong>#rôles-auto-assignable</strong> afin d'apparaître sur la carte.</div>
+                                </div>
                                 <div id="map" style="width: 100%; height: 600px; position: relative; outline: none;" class="leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" tabindex="0"></div>
                                 <% } %>
                             </form>
